--- a/store/store/Templates/base.html
+++ b/store/store/Templates/base.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
+<head>
     {% load static %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Apple Store{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body class="d-flex flex-column min-vh-100">
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+</head>
+<body class="d-flex flex-column min-vh-100">
     <!-- Header -->
-    <header class="bg-primary text-white py-3 position-fixed w-100" style="top: 0; z-index: 1030;">
-      <div class="container">
-        <h1>Apple-Store</h1>
-        {% include 'navbar.html' %}
-      </div>
+    <header class="bg-light text-dark py-3 position-fixed w-100" style="top: 0; z-index: 1030;">
+        <div class="container d-flex justify-content-between align-items-center">
+            <a href="{% url 'index' %}">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple Logo" width="30" height="30">
+            </a>
+            {% include 'navbar.html' %}
+        </div>
     </header>
 
     <!-- Main content -->
-    <main class="container flex-grow-1" >
-      {% block content %}{% endblock %}
+    <main class="container flex-grow-1 pt-5 mt-5">
+        {% block content %}{% endblock %}
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white position-relative">
-      <div class="container text-center">
-        <p>&copy; 2024 Apple Store</p>
-      </div>
+    <footer class="bg-dark text-white py-4 mt-auto">
+        <div class="container text-center">
+            <p>&copy; 2024 Apple Store</p>
+        </div>
     </footer>
-  </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
