--- a/store/store/static/css/styles.css
+++ b/store/store/static/css/styles.css
@@ -1,34 +1,87 @@
+/* Général */
 body {
-    font-family: Arial, sans-serif;
-    min-height: 100vh;
-}
-  
-nav ul {
-    list-style-type: none;
+    font-family: 'Helvetica Neue', sans-serif;
+    color: white;
+    background-color: #000;
+    margin: 0;
     padding: 0;
 }
-  
-nav ul li {
-    display: inline;
-    margin-right: 10px;
+
+h1, h2 {
+    font-weight: 600;
 }
-  
-  
-h1 {
-    font-size: 3em;
+
+/* Navbar */
+.navbar {
+    background-color: #000;
+    padding: 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
-  
-.card:hover {
-    transform: scale(1.05);
-    transition: all 0.3s ease-in-out;
+
+/* Main Section */
+.main-section {
+    background-image: url("../images/iphone.jpg"); /* Chemin relatif */
+    background-size: cover;
+    background-position: center;
+    height: 130vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-  
-.container {
-    flex: 1; 
+
+.promo-content {
+    color: #fff;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
 }
-main {
-    margin-top: 80px; 
+
+.promo-content h1 {
+    font-size: 8rem;
+    margin-bottom: 20px;
 }
-  
-  
-  
+
+.promo-content p {
+    font-size: 1.5rem;
+    margin-bottom: 40px;
+}
+
+.buttons a {
+    margin: 0 10px;
+}
+
+/* Product Section */
+
+.products-section h2 {
+    font-size: 3rem;
+}
+
+.products-section p {
+    font-size: 1.2rem;
+    color: #333;
+}
+
+.products-section {
+    background-image: url("../images/mac.webp"); /* Chemin relatif */
+    background-size: cover;
+    background-position: center;
+    height: 130vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.products-section1 {
+    background-image: url("../images/ipad.jpg"); /* Chemin relatif */
+    background-size: cover;
+    background-position: center;
+    height: 130vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Footer */
+footer {
+    background-color: #111;
+    color: #777;
+}
