--- a/store/store/static/css/styles.css
+++ b/store/store/static/css/styles.css
@@ -1,69 +1,8 @@
-/* Général */
-body {
-    font-family: 'Helvetica Neue', sans-serif;
-    color: white;
-    background-color: #000;
-    margin: 0;
-    padding: 0;
-}
-
-h1, h2 {
-    font-weight: 600;
-}
-
-/* Navbar */
-.navbar {
-    background-color: #000;
-    padding: 10px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-/* Main Section */
-.main-section {
-    background-image: url("../images/iphone.jpg"); /* Chemin relatif */
-    background-size: cover;
-    background-position: center;
-    height: 130vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.promo-content {
-    color: #fff;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-}
-
-.promo-content h1 {
-    font-size: 8rem;
-    margin-bottom: 20px;
-}
-
-.promo-content p {
-    font-size: 1.5rem;
-    margin-bottom: 40px;
-}
-
-.buttons a {
-    margin: 0 10px;
-}
-
-/* Product Section */
-
-.products-section h2 {
-    font-size: 3rem;
-}
-
-.products-section p {
-    font-size: 1.2rem;
-    color: #333;
-}
-
 .products-section {
-    background-image: url("../images/mac.webp"); /* Chemin relatif */
+    background-image: url("../images/ipad.jpg"); /* Chemin relatif correct */
     background-size: cover;
     background-position: center;
-    height: 130vh;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,7 +10,17 @@ h1, h2 {
 }
 
 .products-section1 {
-    background-image: url("../images/ipad.jpg"); /* Chemin relatif */
+    background-image: url("../images/mac.webp"); /* Chemin relatif correct */
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-section {
+    background-image: url("../images/iphone.jpg"); /* Chemin relatif correct */
     background-size: cover;
     background-position: center;
     height: 130vh;
@@ -80,8 +29,20 @@ h1, h2 {
     align-items: center;
 }
 
-/* Footer */
-footer {
-    background-color: #111;
-    color: #777;
+.product-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+}
+
+.product-card:hover .overlay {
+    opacity: 1;
+}
+
+.btn-effect {
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.btn-effect:hover {
+    background-color: #000;
+    color: #fff;
 }
