--- a/store/store/Templates/cart.html
+++ b/store/store/Templates/cart.html
@@ -31,7 +31,7 @@
                         <td>{{ item.price }} $</td>
                         <td>{{ item.price|floatformat:2 }} $</td>
                         <td>
-                            <a href="{% url 'delete_product' item.product.id %}" class="btn btn-danger btn-sm">Supprimer</a>
+                            <a href="{% url 'delete_product_of_cart' item.product.id %}" class="btn btn-danger btn-sm">Supprimer</a>
                         </td>
                     </tr>
                 {% endfor %}
