--- a/store/store/Templates/navbar.html
+++ b/store/store/Templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar mt-2 navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <!-- Brand -->
         <a class="navbar-bank" href="{% url 'index' %}">
@@ -34,18 +34,25 @@
                 </li>
             </ul>
 
-            <!-- Cart Icon with Count -->
-            <ul class="navbar-nav me-3">
-                <li class="nav-item">
-                    <a class="btn btn-outline-light position-relative" href="{% url 'cart' %}">
-                        <i class="bi bi-cart4"></i>
-                        <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                            {{ request.session.cart_count|default:0 }}
-                            <span class="visually-hidden">articles dans le panier</span>
-                        </span>
-                    </a>
-                </li>
-            </ul>
+           <!-- Cart Icon with Count -->
+<ul class="navbar-nav me-3">
+    <li class="nav-item">
+        <a class="btn btn-outline-light position-relative d-flex align-items-center" href="{% url 'cart' %}">
+            <!-- Icone du panier -->
+            <i class="bi bi-cart4 me-2" style="font-size: 1.5rem;"></i>
+            
+            <!-- Compteur des articles dans le panier -->
+            <span class="badge rounded-pill bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light">
+                {{ request.session.cart_count|default:0 }}
+                <span class="visually-hidden">articles dans le panier</span>
+            </span>
+            
+            <!-- Libellé du panier -->
+            <span class="fw-bold">Panier</span>
+        </a>
+    </li>
+</ul>
+
 
             <!-- Search Form -->
             <form class="d-flex" role="search" method="GET" action="{% url 'search_results' %}">
